tests/paczka1/small_fuzzy/15258532.err
Error in line 4: Kb9jTZRDC A242 83,6
Error in line 8: PºZ A126 59,5
Error in line 2: yhyd A137 92,8
